<resources>
    <string name="app_name">pswdManager</string>
    <string name="add_button">add button</string>
    <string name="enter_item_title">Enter Item Title</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="pick_image">Pick Image</string>
    <string name="finish">Finish</string>
    <string name="item_image">Item Image</string>
    <string name="itemServiceName">Service Name</string>
    <string name="item_detailed_description">Item Detailed description</string>
    <string name="delete">delete</string>
    <string name="confirmation_delete_all">Are you sure you want to delete all items?</string>
    <string name="confirmation_logout">Are you sure you want to delete all items?</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="logout">Logout</string>
    <string name="delete_exclamation_mark">Delete!</string>
    <string name="enter_service_name">Site or App</string>
    <string name="enter_username">Username/Email</string>
    <string name="enter_password">password</string>
    <string name="enter_notes">note</string>
    <string name="sign_up_invitation">Don\'t have an account? Sign up</string>
    <string name="change_image">Change image</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="my_passwords">My Passwords</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out_buttonstring">Log out</string>
    <string name="change_to_dark_theme">Change to dark theme</string>
    <string name="strongly_secured">Strongly secured:</string>
    <string name="enable_strong_secure">Enable strong secure</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="profile_image">Profile image:</string>
    <string name="username">Username:</string>
    <string name="type_a_new_username">Type a new username</string>
    <string name="type_a_new_email">Type a new Email</string>
    <string name="type_a_new_password">Type a new password</string>
    <string name="save">Save</string>
    <string name="edit_details">Edit Details</string>
    <string name="change_site">Change Site:</string>
    <string name="type_new_site">Type a new Site</string>
    <string name="change_username">Change Username</string>
    <string name="change_note">Change Note:</string>
    <string name="type_a_new_note">Type a new Note</string>
    <string name="change_password">Change Password:</string>
    <string name="add_password">Add Password</string>
    <string name="note">Note:</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <!--    ERROR MESSAGES-->
    <string name="error_invalid_custom_token">Invalid custom token format.</string>
    <string name="error_custom_token_mismatch">Custom token for a different audience.</string>
    <string name="error_invalid_credential">Malformed credential.</string>
    <string name="error_invalid_email">Badly formatted email address.</string>
    <string name="error_wrong_password">Invalid password.</string>
    <string name="error_user_mismatch">Credentials don\'t match the signed-in user.</string>
    <string name="error_requires_recent_login">Requires recent authentication. Log in again.</string>
    <string name="error_account_exists_with_different_credential">Email already associated with different credentials.</string>
    <string name="error_email_already_in_use">Email already in use.</string>
    <string name="error_credential_already_in_use">Credential already in use.</string>
    <string name="error_user_disabled">User account disabled.</string>
    <string name="error_user_token_expired">Credential expired. Sign in again.</string>
    <string name="error_user_not_found">No user record found.</string>
    <string name="error_invalid_user_token">Invalid credential. Sign in again.</string>
    <string name="error_operation_not_allowed">Operation not allowed. Enable in console.</string>
    <string name="error_weak_password">Password is too weak.</string>
    <string name="error_unknown">An unknown error occurred.</string>


</resources>