<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_dark"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.passwords.single_password_item.AddPasswordItemFragment">

    <TextView
        android:id="@+id/addPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:padding="32dp"
        android:text="@string/add_password"
        android:textColor="@color/text"
        android:textSize="32sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serviceNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_service_name"
            android:textColor="@color/text"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:textColor="@color/text"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/text"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <nu.aaro.gustav.passwordstrengthmeter.PasswordStrengthMeter
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordInputMeter"
        app:strengthBarHeight="5dp"
        app:animateChanges="true"
        app:showStrengthLabel="true"
        app:showStrengthBar="true"
        app:animationDuration="300"
        app:labelTextSize="12sp"/>

    <Button
        android:id="@+id/generatePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Generate strong password"
        android:backgroundTint="@color/accent"
        android:textColor="@color/text"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_notes"
            android:textColor="@color/text"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_image"
        android:textColor="@color/white"
        android:backgroundTint="@color/accent"
        android:layout_gravity="center"
        />
        <ImageView
            android:id="@+id/result_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/item_image"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/ic_launcher"
            />
    </LinearLayout>

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/secondary"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:text="@string/finish" />

</LinearLayout>
