<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/gradient_background_dark"
    app:cardCornerRadius="30dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    tools:context=".ui.passwords.single_password_item.DetailPasswordItemFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemServiceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/itemServiceName"
            android:textColor="@color/text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/email"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/itemUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="user@example.com"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/password"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/itemPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                android:padding="4dp"
                android:text="Password"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/note"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/itemNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="Notes"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/editDetailsBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/edit_details"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.cardview.widget.CardView>
