<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.SinglePasswordItem.PasswordItemAdapter"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/item_image"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemServiceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemServiceName"
                android:textColor="@color/text"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/itemUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:text="@string/username" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
