<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_dark"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.users.register.RegisterFragment">

    <TextView
        android:id="@+id/tvRegisterWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:padding="32dp"
        android:text="@string/create_account"
        android:textColor="@color/text"
        android:textSize="32sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@color/hint_color_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_color_dark"
            app:hintTextColor="@color/hint_color_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@color/hint_color_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_color_dark"
            app:hintTextColor="@color/hint_color_dark" />
    </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/phone"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@color/hint_color_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_color_dark"
            app:hintTextColor="@color/hint_color_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@color/hint_color_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/hint_color_dark"
            app:hintTextColor="@color/hint_color_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondary"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/text"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/registerProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userRegisterButton"
        app:layout_constraintStart_toStartOf="@+id/userRegisterButton"
        app:layout_constraintTop_toBottomOf="@+id/userRegisterButton" />

</LinearLayout>
